--- a/.storybook/head.html
+++ b/.storybook/head.html
@@ -1,1 +1,4 @@
 <link rel="stylesheet" type="text/css" href="storybook.css">
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
