--- a/iframe.html
+++ b/iframe.html
@@ -14,12 +14,16 @@
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
+<!-- rc-tree::dropdown::example -->
+<link rel="stylesheet" href="http://react-component.github.io/tree/examples/dropdown.css">
+
         
       </head>
       <body>
         <div id="root"></div>
         <div id="error-display"></div>
-        <script src="static/preview.b516298351e36d1a3882.bundle.js"></script>
+        <script src="static/preview.d51226e7d186901b20fd.bundle.js"></script>
       </body>
     </html>
   
